fix: update layout in ChatPromptPanel for improved positioning; refactor MarqueeText component for better readability

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,11 +20,18 @@
 		--foreground: #fff;
 	}
 }
+html {
+	overscroll-behavior: none;
+}
 
 body {
 	background: var(--background);
 	color: var(--foreground);
 	font-family: Gotham, sans-serif;
+}
 
-	padding-top: calc(var(--tg-safe-area-inset-top) + 32px);
+@media screen and (max-width: 640px) {
+	body {
+		padding-top: calc(var(--tg-safe-area-inset-top) + 32px);
+	}
 }
